@startuml

title __BLINKY's Class Diagram__\n

  package no.nordicsemi.android.blinky {
    class BlinkyActivity {
        {static} + EXTRA_DEVICE : String
        ~ mLed : Switch
        ~ mButtonState : TextView
        # onCreate()
        + onTryAgainClicked()
        - onConnectionStateChanged()
    }
  }
  

  package no.nordicsemi.android.blinky {
    class ScannerActivity {
        {static} - REQUEST_ACCESS_COARSE_LOCATION : int
        ~ mScanningView : View
        ~ mEmptyView : View
        ~ mNoLocationPermissionView : View
        ~ mGrantPermissionButton : Button
        ~ mPermissionSettingsButton : Button
        ~ mNoLocationView : View
        ~ mNoBluetoothView : View
        # onCreate()
        # onRestart()
        # onStop()
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        + onItemClick()
        + onRequestPermissionsResult()
        + onEnableLocationClicked()
        + onEnableBluetoothClicked()
        + onGrantLocationPermissionClicked()
        + onPermissionSettingsClicked()
        - startScan()
        - stopScan()
        - clear()
    }
  }
  

  package no.nordicsemi.android.blinky {
    class SplashScreenActivity {
        {static} - DURATION : int
        # onCreate()
        + onBackPressed()
    }
  }
  

  BlinkyActivity -up-|> AppCompatActivity
  BlinkyActivity o-- BlinkyViewModel : mViewModel
  HostCallbacks -up-|> FragmentHostCallback
  ScannerActivity -up-|> OnItemClickListener
  ScannerActivity -up-|> AppCompatActivity
  ScannerActivity o-- ScannerViewModel : mScannerViewModel
  HostCallbacks -up-|> FragmentHostCallback
  SplashScreenActivity -up-|> Activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
